Fix broken line wrapping

--- a/src/assets/css/_pkg_help.scss
+++ b/src/assets/css/_pkg_help.scss
@@ -54,7 +54,11 @@
         td:last-child {
           padding-right: 0;
         }
-        */
+         */
+
+        td {
+          word-break: normal;
+        }
 
         th {
           font-size: 14px;
